--- a/.github/workflows/pr_pipeline.yml
+++ b/.github/workflows/pr_pipeline.yml
@@ -31,7 +31,7 @@ jobs:
         run: ./gradlew ktlintCheck --no-daemon
 
   build_android:
-    name: Build Android app
+    name: Build Android app and Desktop
     runs-on: ubuntu-latest
     timeout-minutes: 60
 
@@ -50,11 +50,8 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
-      - name: Build and Test
-        run: ./gradlew assembleDebug test --no-daemon --stacktrace
-
-      - name: Run Lint Checks
-        run: ./gradlew lintDebug
+      - name: Run Build, Lint and Tests
+        run: ./gradlew build --no-daemon --stacktrace
 
 #      - name: Upload Test Reports
 #        uses: actions/upload-artifact@v4
