--- a/.github/workflows/update_currency_rates.yml
+++ b/.github/workflows/update_currency_rates.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: "3.13"
 
       - name: Run update script
         run: python .github/scripts/update_exchange_rates.py
@@ -33,10 +33,11 @@ jobs:
           CURRENCY_EXCHANGE_API_KEY: ${{ secrets.CURRENCY_EXCHANGE_API_KEY }}
 
       - name: Create pull request if rates changed
-        uses: peter-evans/create-pull-request@v6
+        uses: peter-evans/create-pull-request@v7
         with:
           commit-message: "Update exchange rates"
           title: "Update exchange rates"
+          body: "Update exchange rates"
           branch: "bot/update-exchange-rates"
           labels: |
             dependencies
