--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,11 @@
+#Kotlin
 kotlin.code.style=official
+kotlin.daemon.jvmargs=-Xmx3072M
 
 #Gradle
-org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
+org.gradle.configuration-cache=true
+org.gradle.caching=true
 
 #Android
 android.nonTransitiveRClass=true
