Analyze compile time warnings and define threshold
One it exceeds the threshold fail the pipeline.

--- a/.github/workflows/pr_pipeline.yml
+++ b/.github/workflows/pr_pipeline.yml
@@ -51,7 +51,23 @@ jobs:
           java-version: '21'
 
       - name: Run Build, Lint and Tests
-        run: ./gradlew build --no-daemon --no-configuration-cache --no-build-cache --stacktrace
+        run: |
+          EXPECTED_COUNT=0
+
+          ./gradlew build --no-daemon --no-configuration-cache --no-build-cache --stacktrace 2>&1 | tee build_log.txt || true
+
+          # Count the number of compile warnings (lines starting with "w:").
+          WARNING_COUNT=$(grep -c "w: " build_log.txt || true)
+
+          # Check if the count exceeds the threshold
+          echo "Found $WARNING_COUNT warnings. Expected exactly $EXPECTED_COUNT."
+          if [ $WARNING_COUNT -ne $EXPECTED_COUNT ]; then
+            echo "❌ Error: The number of warnings ($WARNING_COUNT) does not match the expected count of $EXPECTED_COUNT."
+            # Exit with a non-zero code to fail the workflow.
+            exit 1
+          else
+            echo "✅ The number of warnings is exactly as expected."
+          fi
 
 #      - name: Upload Test Reports
 #        uses: actions/upload-artifact@v4
