--- a/.github/workflows/pr_pipeline.yml
+++ b/.github/workflows/pr_pipeline.yml
@@ -52,9 +52,11 @@ jobs:
 
       - name: Run Build, Lint and Tests
         run: |
+          set -o pipefail
+
           EXPECTED_COUNT=8
 
-          ./gradlew build --no-daemon --no-configuration-cache --no-build-cache --stacktrace 2>&1 | tee build_log.txt || true
+          ./gradlew build --no-daemon --no-configuration-cache --no-build-cache --stacktrace 2>&1 | tee build_log.txt
 
           # Count the number of compile warnings (lines starting with "w:").
           WARNING_COUNT=$(grep -c "w: " build_log.txt || true)
