--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ android-targetSdk = "36"
 androidx-activityCompose = "1.11.0"
 androidx-appcompat = "1.7.1"
 androidx-datastore-preferences = "1.1.7"
-androidx-lifecycle-viewmodel = "2.9.3"
+androidx-lifecycle-viewmodel = "2.9.4"
 androidx-navigation-compose = "2.9.0"
 androidx-test-junit = "1.3.0"
 biometric = "1.1.0"
@@ -37,7 +37,7 @@ androidx-biometric = { module = "androidx.biometric:biometric", version.ref = "b
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidx-datastore-preferences" }
 androidx-glance-appwidget = { module = "androidx.glance:glance-appwidget", version.ref = "glance" }
 androidx-glance-material3 = { module = "androidx.glance:glance-material3", version.ref = "glance" }
-androidx-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel", version.ref = "androidx-lifecycle-viewmodel" }
+androidx-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "androidx-lifecycle-viewmodel" }
 androidx-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "androidx-navigation-compose" }
 androidx-test-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-junit" }
 compose-colorpicker = { module = "com.github.skydoves:colorpicker-compose", version.ref = "colorpicker" }
